[tool.poetry]
name = "bluesky-arxiv"
version = "0.1.0"
description = ""
authors = ["Jose Renau <renau@ucsc.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "=3.13"
feedparser = "^6.0.11"
atproto = "^0.0.56"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
